WIP: Hybrid model

--- a/transformers.ipynb
+++ b/transformers.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,18 +469,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Batch: [tensor([[1.0000, 0.8741, 0.4898,  ..., 0.0000, 0.0000, 0.0000],\n",
-      "        [1.0000, 0.7308, 0.2101,  ..., 0.0000, 0.0000, 0.0000],\n",
-      "        [0.9564, 0.8295, 0.3769,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "Train Batch: [tensor([[1.0000, 0.8250, 0.2500,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "        [0.9364, 0.8497, 0.4220,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "        [0.8952, 0.6617, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
       "        ...,\n",
-      "        [1.0000, 0.7835, 0.5309,  ..., 0.0000, 0.0000, 0.0000],\n",
-      "        [1.0000, 0.9373, 0.8210,  ..., 0.0000, 0.0000, 0.0000],\n",
-      "        [0.5629, 0.4335, 0.2716,  ..., 0.0000, 0.0000, 0.0000]]), tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 4, 0, 4, 0, 2, 0,\n",
-      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 4, 0, 4, 0, 2, 4, 0, 0, 2, 0, 0, 0, 0, 0, 0,\n",
-      "        0, 0, 0, 0, 0, 0, 3, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 4, 4, 0, 1, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0,\n",
-      "        0, 0, 0, 0, 2, 0, 0, 2])]\n",
+      "        [0.9588, 0.7341, 0.5693,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "        [0.8571, 0.7455, 0.5625,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "        [0.9048, 0.6735, 0.2871,  ..., 0.0000, 0.0000, 0.0000]]), tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 1, 0, 4, 0, 4, 0, 0, 4, 0, 0, 0,\n",
+      "        0, 0, 0, 2, 0, 0, 0, 2, 0, 4, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 4, 0, 0, 0, 2, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 4, 0, 4, 0, 0, 1, 0, 0, 0, 0, 0, 0,\n",
+      "        1, 2, 0, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 4, 0, 0, 0, 0, 0, 0, 0, 0, 4,\n",
+      "        2, 0, 0, 0, 4, 0, 0, 0])]\n",
       "Validation Batch: [tensor([[0.9779, 0.9265, 0.6814,  ..., 0.0000, 0.0000, 0.0000],\n",
       "        [0.9601, 0.8632, 0.4615,  ..., 0.0000, 0.0000, 0.0000],\n",
       "        [1.0000, 0.6595, 0.1865,  ..., 0.0000, 0.0000, 0.0000],\n",
@@ -493,13 +493,13 @@
       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
       "        0, 0, 0, 0, 0, 0, 0, 0])]\n",
-      "Test Batch: [tensor([[0.9779, 0.9265, 0.6814,  ..., 0.0000, 0.0000, 0.0000],\n",
-      "        [0.9601, 0.8632, 0.4615,  ..., 0.0000, 0.0000, 0.0000],\n",
-      "        [1.0000, 0.6595, 0.1865,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "Test Batch: [tensor([[1.0000, 0.7583, 0.1116,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "        [0.9084, 0.7839, 0.5311,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "        [0.7301, 0.2124, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
       "        ...,\n",
-      "        [1.0000, 0.8201, 0.4259,  ..., 0.0000, 0.0000, 0.0000],\n",
-      "        [1.0000, 0.8761, 0.4720,  ..., 0.0000, 0.0000, 0.0000],\n",
-      "        [0.9361, 0.9567, 0.4948,  ..., 0.0000, 0.0000, 0.0000]]), tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        [1.0000, 0.8124, 0.4096,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "        [0.0579, 0.0211, 0.2158,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "        [0.9304, 0.9046, 0.5517,  ..., 0.0000, 0.0000, 0.0000]]), tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
@@ -624,7 +624,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69ec96426967491f8ddfec2021dfaffd",
+       "model_id": "94ca9071f8eb4be2bdd80a47ba4efa0d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -648,7 +648,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "303941447f0e405a91cde7cf07d2a368",
+       "model_id": "9be84d52ba9a48b8a6923e06a50b551a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -662,7 +662,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "21b2bbe66ad748f7891ca3ca47bb93a0",
+       "model_id": "23120b4411b44ab1b7effdb9ae18e269",
        "version_major": 2,
        "version_minor": 0
       },
@@ -677,13 +677,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 0, global step 685: 'val_acc' reached 97.77623 (best 97.77623), saving model to './model/checkpoints\\\\ecg-transformer-v1.ckpt' as top 1\n"
+      "Epoch 0, global step 685: 'val_acc' reached 97.60034 (best 97.60034), saving model to './model/checkpoints\\\\ecg-transformer-v2.ckpt' as top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c67a516c3060449a98699778c977421b",
+       "model_id": "65fc7e77635d4bd99b9b1b86ecb4187d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -698,13 +698,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1, global step 1370: 'val_acc' reached 98.46152 (best 98.46152), saving model to './model/checkpoints\\\\ecg-transformer-v1.ckpt' as top 1\n"
+      "Epoch 1, global step 1370: 'val_acc' reached 98.41926 (best 98.41926), saving model to './model/checkpoints\\\\ecg-transformer-v2.ckpt' as top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16e342ed6c084f9db40a4baf234f43ab",
+       "model_id": "529a735796484d24b26895a15a9e8a19",
        "version_major": 2,
        "version_minor": 0
       },
@@ -719,13 +719,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 2, global step 2055: 'val_acc' reached 98.71736 (best 98.71736), saving model to './model/checkpoints\\\\ecg-transformer-v1.ckpt' as top 1\n"
+      "Epoch 2, global step 2055: 'val_acc' reached 98.74820 (best 98.74820), saving model to './model/checkpoints\\\\ecg-transformer-v2.ckpt' as top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ff30e0fb44a415abbf49e04a9129fe1",
+       "model_id": "03041aec6f3a4948875f02d39fd73dce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -740,13 +740,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 3, global step 2740: 'val_acc' reached 99.03374 (best 99.03374), saving model to './model/checkpoints\\\\ecg-transformer-v1.ckpt' as top 1\n"
+      "Epoch 3, global step 2740: 'val_acc' reached 98.90239 (best 98.90239), saving model to './model/checkpoints\\\\ecg-transformer-v2.ckpt' as top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df3a034c490a455c8602e5c447530787",
+       "model_id": "08a8a651bb184ae4b83e167d1937f23c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -761,13 +761,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 4, global step 3425: 'val_acc' reached 99.27473 (best 99.27473), saving model to './model/checkpoints\\\\ecg-transformer-v1.ckpt' as top 1\n"
+      "Epoch 4, global step 3425: 'val_acc' reached 99.35925 (best 99.35925), saving model to './model/checkpoints\\\\ecg-transformer-v2.ckpt' as top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ff2fa592ee64490a024d1efaa31481d",
+       "model_id": "336b01ab17b545628ba1e03e3c41429a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -788,7 +788,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "da43ee797e0f44839e02ba15cf1be4e9",
+       "model_id": "0492597263014adeb89660537e9b5d21",
        "version_major": 2,
        "version_minor": 0
       },
@@ -809,7 +809,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85e45e1d27194ed992845389a3dae7ba",
+       "model_id": "9c9fa7d1bbf54952a0b4d7e368e9bbb1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -824,13 +824,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 7, global step 5480: 'val_acc' reached 99.43463 (best 99.43463), saving model to './model/checkpoints\\\\ecg-transformer-v1.ckpt' as top 1\n"
+      "Epoch 7, global step 5480: 'val_acc' reached 99.50773 (best 99.50773), saving model to './model/checkpoints\\\\ecg-transformer-v2.ckpt' as top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb2ff4eefeae417581ea9e7492ac5926",
+       "model_id": "cda600c227d84e63b17681d2a3b726a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -851,7 +851,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09a227466bac4e89bda6dfe93ce0bd2f",
+       "model_id": "3686a61275aa4ba1990ee06f167909cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -866,13 +866,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 9, global step 6850: 'val_acc' reached 99.60368 (best 99.60368), saving model to './model/checkpoints\\\\ecg-transformer-v1.ckpt' as top 1\n"
+      "Epoch 9, global step 6850: 'val_acc' was not in top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c15c0c2686b4a7382a2e8e6b79ef60d",
+       "model_id": "8ccfc38f73964359b255a04e6f0612eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -893,7 +893,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "454181f964bb49249633ab567e71517f",
+       "model_id": "0a49d68128494f51bbdd65b90d2737e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -908,13 +908,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 11, global step 8220: 'val_acc' reached 99.62652 (best 99.62652), saving model to './model/checkpoints\\\\ecg-transformer-v1.ckpt' as top 1\n"
+      "Epoch 11, global step 8220: 'val_acc' reached 99.61967 (best 99.61967), saving model to './model/checkpoints\\\\ecg-transformer-v2.ckpt' as top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b6e297b85f54ef5a54dadaf8c9dde00",
+       "model_id": "b8509fd39b83401b8f2aefe342bbba4e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -935,7 +935,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9384c71a4480449083fc9884f3b901e7",
+       "model_id": "cb86822339b742e488ecfeff721e71c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -950,13 +950,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 13, global step 9590: 'val_acc' reached 99.64707 (best 99.64707), saving model to './model/checkpoints\\\\ecg-transformer-v1.ckpt' as top 1\n"
+      "Epoch 13, global step 9590: 'val_acc' reached 99.63680 (best 99.63680), saving model to './model/checkpoints\\\\ecg-transformer-v2.ckpt' as top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4354057154d449cf982fbd1951717ce4",
+       "model_id": "d8a7e4d373154ddcb0d02fe1cb27aa3f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -977,7 +977,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef7d1370013e4b48b42c1bb9df0b61cc",
+       "model_id": "ffd7c6ecaa294d5093cc2a59d83184e0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -992,13 +992,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 15, global step 10960: 'val_acc' reached 99.65621 (best 99.65621), saving model to './model/checkpoints\\\\ecg-transformer-v1.ckpt' as top 1\n"
+      "Epoch 15, global step 10960: 'val_acc' was not in top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "acb17727f66d460eb459c94a1f6d7ee1",
+       "model_id": "17900d560540413a894704483e31afc8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1013,13 +1013,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 16, global step 11645: 'val_acc' was not in top 1\n"
+      "Epoch 16, global step 11645: 'val_acc' reached 99.70304 (best 99.70304), saving model to './model/checkpoints\\\\ecg-transformer-v2.ckpt' as top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbce10f635e04c8d8a5e3b08f73aeb03",
+       "model_id": "ce616f90a3c6444f9aaf84726ac3317d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1034,13 +1034,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 17, global step 12330: 'val_acc' was not in top 1\n"
+      "Epoch 17, global step 12330: 'val_acc' reached 99.70761 (best 99.70761), saving model to './model/checkpoints\\\\ecg-transformer-v2.ckpt' as top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "328bf5a359b64d3c87db8213d45099e5",
+       "model_id": "68438fa9593f407d80a42f444c73becd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1061,7 +1061,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "91ac3a1b12ca4075a33dbffa397cc985",
+       "model_id": "a298527b7d19437c803c240cf76ab76f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1076,13 +1076,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 19, global step 13700: 'val_acc' reached 99.70647 (best 99.70647), saving model to './model/checkpoints\\\\ecg-transformer-v1.ckpt' as top 1\n"
+      "Epoch 19, global step 13700: 'val_acc' was not in top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fecfa8c36bf246f29d1124aa8b257bbf",
+       "model_id": "3f7f0d52d5504ee5a1a0d46fc955d72c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1103,7 +1103,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c343551fb24542839e72f06fc74af240",
+       "model_id": "81428e97ad124c92badbccbfee0ade30",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1118,7 +1118,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 21, global step 15070: 'val_acc' was not in top 1\n",
+      "Epoch 21, global step 15070: 'val_acc' reached 99.73045 (best 99.73045), saving model to './model/checkpoints\\\\ecg-transformer-v2.ckpt' as top 1\n",
       "`Trainer.fit` stopped: `max_epochs=22` reached.\n"
      ]
     }
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1182,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d1907320e6494fac9293b0c131011fab",
+       "model_id": "41bc19868acf4dad8b872325da50f1ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1200,8 +1200,8 @@
        "┃<span style=\"font-weight: bold\">   Runningstage.testing    </span>┃<span style=\"font-weight: bold\">                           </span>┃\n",
        "┃<span style=\"font-weight: bold\">          metric           </span>┃<span style=\"font-weight: bold\">       DataLoader 0        </span>┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━┩\n",
-       "│<span style=\"color: #008080; text-decoration-color: #008080\">         test_acc          </span>│<span style=\"color: #800080; text-decoration-color: #800080\">     99.72627258300781     </span>│\n",
-       "│<span style=\"color: #008080; text-decoration-color: #008080\">         test_loss         </span>│<span style=\"color: #800080; text-decoration-color: #800080\">   0.008242008276283741    </span>│\n",
+       "│<span style=\"color: #008080; text-decoration-color: #008080\">         test_acc          </span>│<span style=\"color: #800080; text-decoration-color: #800080\">     97.86064910888672     </span>│\n",
+       "│<span style=\"color: #008080; text-decoration-color: #008080\">         test_loss         </span>│<span style=\"color: #800080; text-decoration-color: #800080\">    0.12301717698574066    </span>│\n",
        "└───────────────────────────┴───────────────────────────┘\n",
        "</pre>\n"
       ],
@@ -1210,8 +1210,8 @@
        "┃\u001b[1m \u001b[0m\u001b[1m  Runningstage.testing   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m                           \u001b[0m┃\n",
        "┃\u001b[1m \u001b[0m\u001b[1m         metric          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      DataLoader 0       \u001b[0m\u001b[1m \u001b[0m┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━┩\n",
-       "│\u001b[36m \u001b[0m\u001b[36m        test_acc         \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m    99.72627258300781    \u001b[0m\u001b[35m \u001b[0m│\n",
-       "│\u001b[36m \u001b[0m\u001b[36m        test_loss        \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m  0.008242008276283741   \u001b[0m\u001b[35m \u001b[0m│\n",
+       "│\u001b[36m \u001b[0m\u001b[36m        test_acc         \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m    97.86064910888672    \u001b[0m\u001b[35m \u001b[0m│\n",
+       "│\u001b[36m \u001b[0m\u001b[36m        test_loss        \u001b[0m\u001b[36m \u001b[0m│\u001b[35m \u001b[0m\u001b[35m   0.12301717698574066   \u001b[0m\u001b[35m \u001b[0m│\n",
        "└───────────────────────────┴───────────────────────────┘\n"
       ]
      },
@@ -1221,10 +1221,10 @@
     {
      "data": {
       "text/plain": [
-       "[{'test_acc': 99.72627258300781, 'test_loss': 0.008242008276283741}]"
+       "[{'test_acc': 97.86064910888672, 'test_loss': 0.12301717698574066}]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1233,6 +1233,7 @@
     "# Testing\n",
     "print(f\"Loading checkpoint: {ckpt_name}.ckpt\")\n",
     "model = model.load_from_checkpoint(\n",
+    "    #change this when loading different models\n",
     "    os.path.join(save_path, \"checkpoints\", ckpt_name+\".ckpt\")\n",
     ")\n",
     "trainer.test(model, datamodule=datamodule)"
