fix: import library

--- a/RNN.ipynb
+++ b/RNN.ipynb
@@ -25,7 +25,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sb\n",
-    "import matplotlib.pyplot as pltA\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
