--- a/main.ipynb
+++ b/main.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\randa\\AppData\\Local\\Temp\\ipykernel_65632\\251356151.py:13: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        N\n",
+      "C:\\Users\\randa\\AppData\\Local\\Temp\\ipykernel_36556\\251356151.py:13: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        N\n",
       "1        N\n",
       "2        N\n",
       "3        N\n",
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -250,25 +250,25 @@
     "\n",
     "\n",
     "label_encoder = LabelEncoder()\n",
-    "y = label_encoder.fit_transform(y_label)  # Encode labels without replacement\n",
+    "# y = label_encoder.fit_transform(y_label)  \n",
     "\n",
-    "model_path = \"./model/cnn_model.pth\"\n",
+    "model_path = \"./model/cnn_model2.pth\"\n",
     "num_classes = len(label_encoder.classes_)\n",
-    "loaded_CNNmodel = CNN1D(num_classes).to(device)  # Reinitialize model with the same architecture\n",
+    "loaded_CNNmodel = CNN1D(num_classes).to(device)  \n",
     "loaded_CNNmodel.load_state_dict(torch.load(model_path, weights_only=True))\n",
     "print(\"Model loaded successfully.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy for CNN model: 0.9823\n"
+      "Test Accuracy for CNN model: 0.9815\n"
      ]
     }
    ],
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc9bb3f786054fbc8b836f03aad12d48",
+       "model_id": "61e7f6372ca04fc58286110ee04e360a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -412,7 +412,7 @@
        "[{'test_acc': 97.78797149658203, 'test_loss': 0.11676190793514252}]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m model_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./model/simple_rnn_model.pth\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 3\u001b[0m rnn_model \u001b[38;5;241m=\u001b[39m \u001b[43mRNNModel\u001b[49m(inputSize, hiddenSize, numLayers, numClasses)\n\u001b[0;32m      4\u001b[0m rnn_model\u001b[38;5;241m.\u001b[39mload_state_dict(torch\u001b[38;5;241m.\u001b[39mload(model_path, weights_only\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m))\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mModel loaded successfully.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[17], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m model_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./model/simple_rnn_model.pth\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 3\u001b[0m rnn_model \u001b[38;5;241m=\u001b[39m \u001b[43mRNNModel\u001b[49m(inputSize, hiddenSize, numLayers, numClasses)\n\u001b[0;32m      4\u001b[0m rnn_model\u001b[38;5;241m.\u001b[39mload_state_dict(torch\u001b[38;5;241m.\u001b[39mload(model_path, weights_only\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m))\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mModel loaded successfully.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[1;31mNameError\u001b[0m: name 'RNNModel' is not defined"
      ]
     }
@@ -488,6 +488,81 @@
     "| RNN          | 0.8279        |\n",
     "| RNN(LSTM)    | 0.8278        |\n",
     "| RNN(GRU)     | 0.9740        |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With train_data split \\\n",
+    "CNN: 0.9819\n",
+    "\n",
+    "With data transformation \\\n",
+    "CNN: 0.9788, 9740"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model testing 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In diagnosing heartbeats, we would be more concerned about the false negatives and false positives \n",
+    "to do so, we will carry out classification on 2 specific datasets, ptbdb_abnormal and ptbdb_normal to detect the model's ability to correctly classify normal and abnormal heartbeats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['mitbih_test', 'mitbih_train', 'ptbdb_abnormal', 'ptbdb_normal'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dataframes.keys())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dataframes' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m abnormal_df \u001b[38;5;241m=\u001b[39m \u001b[43mdataframes\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mptbdb_abnormal\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      2\u001b[0m normal_df \u001b[38;5;241m=\u001b[39m dataframes[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mptbdb_normal\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(abnormal_df\u001b[38;5;241m.\u001b[39mshape)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'dataframes' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "abnormal_df = dataframes['ptbdb_abnormal']\n",
+    "normal_df = dataframes['ptbdb_normal']\n",
+    "\n",
+    "print(abnormal_df.shape)"
    ]
   }
  ],
