remove reduntant data-sugmentations

--- a/main.ipynb
+++ b/main.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We shall evaluate all models on unseen data by training only on the mitbih_train.csv and testing on mitbih_test.csv here"
+    "We shall evaluate all models on unseen data by using the models which are only trained on the mitbih_train.csv and we do testing on mitbih_test.csv here"
    ]
   },
   {
