add: layout for data augmentation

--- a/data_augmentation.ipynb
+++ b/data_augmentation.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -38,9 +38,10 @@
     "import seaborn as sb\n",
     "import torch\n",
     "\n",
+    "from common_utils import set_and_get_seed, get_dataloader\n",
+    "\n",
     "# Seed\n",
-    "SEED = 11\n",
-    "torch.manual_seed(SEED)"
+    "SEED = set_and_get_seed()"
    ]
   },
   {
@@ -66,17 +67,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import dataset"
+    "## Original Dataset"
    ]
   },
   {
@@ -575,7 +569,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Transformation all data to the same level"
+    "## Stretching and Amplying ECG Signals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TODO CHANGE INTO INDEPENDENT FROM SMOTE"
    ]
   },
   {
@@ -616,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +634,7 @@
    "source": [
     "x = np.arange(0, 187)*8/1000\n",
     "\n",
-    "plt.figure(figsize=(20,12))\n",
+    "plt.figure(figsize=(12, 6))\n",
     "plt.plot(x, X_train_resampled[C0, :][0], label=\"Cat. N\")\n",
     "plt.plot(x, X_train_resampled[C1, :][0], label=\"Cat. S\")\n",
     "plt.plot(x, X_train_resampled[C2, :][0], label=\"Cat. V\")\n",
@@ -802,6 +803,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Experiments and Results on Original and Augmented Datasets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -811,7 +819,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -825,7 +833,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
