add: new datasets

--- a/main.ipynb
+++ b/main.ipynb
@@ -322,12 +322,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "path = \"./heartbeat_Dataset\"\n",
-    "from common_utils import LitTransformer, LitMITBIH\n",
+    "from transformer_eval import LitTransformer, LitMITBIH\n",
     "model = LitTransformer(input_size, num_classes, num_heads, depth, max_epochs, lr, dropout)\n",
     "datamodule = LitMITBIH( path, batch_size, num_workers, length=input_size)\n",
     "datamodule.setup()\n"
