post augment and SMOTE training

--- a/data_augmentation.ipynb
+++ b/data_augmentation.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +33,7 @@
     "import numpy as np\n",
     "import seaborn as sb\n",
     "import torch\n",
+    "import os\n",
     "\n",
     "from common_utils import set_and_get_seed, get_dataloader\n",
     "\n",
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +277,7 @@
        "[5 rows x 188 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +408,7 @@
        "Text(0.5, 1.0, 'Percentage of each class in train data')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -452,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +504,7 @@
        "Text(0.5, 1.0, 'Percentage of each class in resampled train data')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -533,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -560,10 +561,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "os.makedirs(\"augmented_data\", exist_ok=True)\n",
     "train_data.to_csv(\"augmented_data/train_data_SMOTE.csv\", header=False)\n",
     "train_data.to_csv(\"augmented_data/val_data.csv\", header=False)"
    ]
@@ -591,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +791,7 @@
     "train_data = np.column_stack((augmented_data, extended_y_train))\n",
     "print(train_data.shape)\n",
     "train_data = pd.DataFrame(train_data)\n",
-    "train_data.to_csv(\"augmented_data/train_data_augment.csv\", index=False)"
+    "train_data.to_csv(\"augmented_data/train_data_augment.csv\", header=False)"
    ]
   },
   {
