--- a/main.ipynb
+++ b/main.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\randa\\AppData\\Local\\Temp\\ipykernel_36556\\251356151.py:13: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        N\n",
+      "C:\\Users\\randa\\AppData\\Local\\Temp\\ipykernel_51696\\251356151.py:13: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        N\n",
       "1        N\n",
       "2        N\n",
       "3        N\n",
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -250,9 +250,9 @@
     "\n",
     "\n",
     "label_encoder = LabelEncoder()\n",
-    "# y = label_encoder.fit_transform(y_label)  \n",
+    "y = label_encoder.fit_transform(y_label)  \n",
     "\n",
-    "model_path = \"./model/cnn_model2.pth\"\n",
+    "model_path = \"./model/cnn_model.pth\"\n",
     "num_classes = len(label_encoder.classes_)\n",
     "loaded_CNNmodel = CNN1D(num_classes).to(device)  \n",
     "loaded_CNNmodel.load_state_dict(torch.load(model_path, weights_only=True))\n",
@@ -261,14 +261,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy for CNN model: 0.9815\n"
+      "Test Accuracy for CNN model: 0.9823\n"
      ]
     }
    ],
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61e7f6372ca04fc58286110ee04e360a",
+       "model_id": "6e0c963642434e359cbf1baa35be5321",
        "version_major": 2,
        "version_minor": 0
       },
@@ -412,7 +412,7 @@
        "[{'test_acc': 97.78797149658203, 'test_loss': 0.11676190793514252}]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,11 +494,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With train_data split \\\n",
-    "CNN: 0.9819\n",
-    "\n",
-    "With data transformation \\\n",
-    "CNN: 0.9788, 9740"
+    "Transformer-CNN(SMOTE) Test Accuracy: 0.9979 \\\n",
+    "Transformer-CNN(angment) Test Accuracy: 0.8283"
    ]
   },
   {
