--- a/data_augmentation.ipynb
+++ b/data_augmentation.ipynb
@@ -790,7 +790,7 @@
    "outputs": [],
    "source": [
     "from CNN_GRU_hybrid import CNN_GRU\n",
-    "# Import transformer+CNN here\n",
+    "from CNN_Transformer_hybrid import CNNTransformerHybrid\n",
     "\n",
     "# CONSTANTS\n",
     "EPOCHS = 30\n",
@@ -881,16 +881,9 @@
    "source": [
     "cnn_gru_model = CNN_GRU()\n",
     "cnn_gru_optimizer = torch.optim.Adam(cnn_gru_model.parameters(), lr=LEARNING_RATE)\n",
-    "scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(cnn_gru_optimizer, T_max=EPOCHS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_losses, train_accuracies, test_losses, test_accuracies = train_and_evaluate(cnn_gru_model, cnn_gru_optimizer, train_loader, test_loader, DEVICE, EPOCHS)\n",
+    "scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(cnn_gru_optimizer, T_max=EPOCHS)\n",
+    "\n",
+    "train_losses, train_accuracies, test_losses, test_accuracies = train_and_evaluate(cnn_gru_model, cnn_gru_optimizer, train_loader, test_loader, DEVICE, EPOCHS, scheduler=scheduler)\n",
     "\n",
     "metrics_dict['original_cnn_gru'] = store_metrics(train_losses, train_accuracies, test_losses, test_accuracies)"
    ]
@@ -899,13 +892,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### CNN+Transformer"
+    "#### CNN+Transformer"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "cnn_trans_model = CNNTransformerHybrid(\n",
+    "    input_dim=187,  # Number of features per sample (input dimension)\n",
+    "    num_classes=5,  # Number of output classes\n",
+    "    num_heads=8,    # Multi-head attention heads\n",
+    "    num_layers=6,   # Number of Transformer layers\n",
+    "    d_model=128     # Dimension of transformer model\n",
+    ")\n",
+    "cnn_trans_optimizer = torch.optim.Adam(cnn_trans_model.parameters(), lr=LEARNING_RATE)\n",
+    "\n",
+    "train_losses, train_accuracies, test_losses, test_accuracies = train_and_evaluate(cnn_trans_model, cnn_trans_optimizer, train_loader, test_loader, DEVICE, EPOCHS)\n",
+    "\n",
+    "metrics_dict['original_cnn_trans'] = store_metrics(train_losses, train_accuracies, test_losses, test_accuracies)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -934,7 +942,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### CNN+GRU"
+    "#### CNN+GRU"
    ]
   },
   {
@@ -947,7 +955,7 @@
     "cnn_gru_optimizer = torch.optim.Adam(cnn_gru_model.parameters(), lr=LEARNING_RATE)\n",
     "scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(cnn_gru_optimizer, T_max=EPOCHS)\n",
     "\n",
-    "train_losses, train_accuracies, test_losses, test_accuracies= train_and_evaluate(cnn_gru_model, cnn_gru_optimizer, train_loader, test_loader, DEVICE, EPOCHS)\n",
+    "train_losses, train_accuracies, test_losses, test_accuracies= train_and_evaluate(cnn_gru_model, cnn_gru_optimizer, train_loader, test_loader, DEVICE, EPOCHS, scheduler)\n",
     "\n",
     "metrics_dict['smote_cnn_gru'] = store_metrics(train_losses, train_accuracies, test_losses, test_accuracies)"
    ]
@@ -956,7 +964,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### CNN+Transformer"
+    "#### CNN+Transformer"
    ]
   },
   {
@@ -964,7 +972,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cnn_trans_model = CNNTransformerHybrid(\n",
+    "    input_dim=187,  # Number of features per sample (input dimension)\n",
+    "    num_classes=5,  # Number of output classes\n",
+    "    num_heads=8,    # Multi-head attention heads\n",
+    "    num_layers=6,   # Number of Transformer layers\n",
+    "    d_model=128     # Dimension of transformer model\n",
+    ")\n",
+    "cnn_trans_optimizer = torch.optim.Adam(cnn_trans_model.parameters(), lr=LEARNING_RATE)\n",
+    "\n",
+    "train_losses, train_accuracies, test_losses, test_accuracies = train_and_evaluate(cnn_trans_model, cnn_trans_optimizer, train_loader, test_loader, DEVICE, EPOCHS)\n",
+    "\n",
+    "metrics_dict['smote_cnn_trans'] = store_metrics(train_losses, train_accuracies, test_losses, test_accuracies)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -993,7 +1014,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### CNN+GRU"
+    "#### CNN+GRU"
    ]
   },
   {
@@ -1006,7 +1027,7 @@
     "cnn_gru_optimizer = torch.optim.Adam(cnn_gru_model.parameters(), lr=LEARNING_RATE)\n",
     "scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(cnn_gru_optimizer, T_max=EPOCHS)\n",
     "\n",
-    "train_losses, train_accuracies, test_losses, test_accuracies= train_and_evaluate(cnn_gru_model, cnn_gru_optimizer, train_loader, test_loader, DEVICE, EPOCHS)\n",
+    "train_losses, train_accuracies, test_losses, test_accuracies= train_and_evaluate(cnn_gru_model, cnn_gru_optimizer, train_loader, test_loader, DEVICE, EPOCHS, scheduler=scheduler)\n",
     "\n",
     "metrics_dict['st_cnn_gru'] = store_metrics(train_losses, train_accuracies, test_losses, test_accuracies)"
    ]
@@ -1015,13 +1036,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### CNN+Transformer"
+    "#### CNN+Transformer"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "cnn_trans_model = CNNTransformerHybrid(\n",
+    "    input_dim=187,  # Number of features per sample (input dimension)\n",
+    "    num_classes=5,  # Number of output classes\n",
+    "    num_heads=8,    # Multi-head attention heads\n",
+    "    num_layers=6,   # Number of Transformer layers\n",
+    "    d_model=128     # Dimension of transformer model\n",
+    ")\n",
+    "cnn_trans_optimizer = torch.optim.Adam(cnn_trans_model.parameters(), lr=LEARNING_RATE)\n",
+    "\n",
+    "train_losses, train_accuracies, test_losses, test_accuracies = train_and_evaluate(cnn_trans_model, cnn_trans_optimizer, train_loader, test_loader, DEVICE, EPOCHS)\n",
+    "\n",
+    "metrics_dict['st_cnn_trans'] = store_metrics(train_losses, train_accuracies, test_losses, test_accuracies)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1041,6 +1077,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### CNN+GRU"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1057,14 +1100,14 @@
     "ax1.plot(range(len(EPOCHS)), original_train_loss, label='Training Loss')\n",
     "ax1.plot(range(len(EPOCHS)), original_test_loss, label='Test Loss')\n",
     "ax1.set_title('Original Loss')\n",
-    "ax1.legend(loc='lower right')\n",
+    "ax1.legend(loc='best')\n",
     "\n",
     "original_train_acc = cnngru_ori_dict['train_acc']\n",
     "original_test_acc = cnngru_ori_dict['test_acc']\n",
     "ax1.plot(range(len(EPOCHS)), original_train_acc, label='Training Accuracy')\n",
     "ax1.plot(range(len(EPOCHS)), original_test_acc, label='Test Accuracy')\n",
     "ax1.set_title('Original Accuracy')\n",
-    "ax1.legend(loc='lower right')\n",
+    "ax1.legend(loc='best')\n",
     "\n",
     "# SMOTE\n",
     "cnngru_smote_dict = metrics_dict['smote_cnn_gru']\n",
@@ -1074,7 +1117,7 @@
     "ax3.plot(range(len(EPOCHS)), smote_train_loss, label='Training Loss')\n",
     "ax3.plot(range(len(EPOCHS)), smote_test_loss, label='Test Loss')\n",
     "ax3.set_title('SMOTE Loss')\n",
-    "ax3.legend(loc='lower right')\n",
+    "ax3.legend(loc='best')\n",
     "\n",
     "smote_train_acc = cnngru_smote_dict['train_acc']\n",
     "smote_test_acc = cnngru_smote_dict['test_acc']\n",
@@ -1091,7 +1134,7 @@
     "ax5.plot(range(len(EPOCHS)), smote_train_loss, label='Training Loss')\n",
     "ax5.plot(range(len(EPOCHS)), smote_test_loss, label='Test Loss')\n",
     "ax5.set_title('SMOTE Loss')\n",
-    "ax5.legend(loc='lower right')\n",
+    "ax5.legend(loc='best')\n",
     "\n",
     "ts_train_acc = cnngru_ts_dict['train_acc']\n",
     "ts_test_acc = cnngru_ts_dict['test_acc']\n",
@@ -1102,16 +1145,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### CNN+Transfomer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# CNN+Transfomer Graphs (Loss + Accuracy side by side for each dataset)\n",
+    "fig, (ax1 , ax2, ax3, ax4, ax5, ax6) = plt.subplots(3, 2, figsize=(12, 6))\n",
+    "\n",
+    "# Original\n",
+    "cnntrans_ori_dict = metrics_dict['original_cnn_trans']\n",
+    "\n",
+    "original_train_loss = cnntrans_ori_dict['train_losses']\n",
+    "original_test_loss = cnntrans_ori_dict['test_losses']\n",
+    "ax1.plot(range(len(EPOCHS)), original_train_loss, label='Training Loss')\n",
+    "ax1.plot(range(len(EPOCHS)), original_test_loss, label='Test Loss')\n",
+    "ax1.set_title('Original Loss')\n",
+    "ax1.legend(loc='best')\n",
+    "\n",
+    "original_train_acc = cnntrans_ori_dict['train_acc']\n",
+    "original_test_acc = cnntrans_ori_dict['test_acc']\n",
+    "ax1.plot(range(len(EPOCHS)), original_train_acc, label='Training Accuracy')\n",
+    "ax1.plot(range(len(EPOCHS)), original_test_acc, label='Test Accuracy')\n",
+    "ax1.set_title('Original Accuracy')\n",
+    "ax1.legend(loc='lower right')\n",
+    "\n",
+    "# SMOTE\n",
+    "cnntrans_smote_dict = metrics_dict['smote_cnn_trans']\n",
+    "\n",
+    "smote_train_loss = cnntrans_smote_dict['train_losses']\n",
+    "smote_test_loss = cnntrans_smote_dict['test_losses']\n",
+    "ax3.plot(range(len(EPOCHS)), smote_train_loss, label='Training Loss')\n",
+    "ax3.plot(range(len(EPOCHS)), smote_test_loss, label='Test Loss')\n",
+    "ax3.set_title('SMOTE Loss')\n",
+    "ax3.legend(loc='best')\n",
+    "\n",
+    "smote_train_acc = cnntrans_ori_dict['train_acc']\n",
+    "smote_test_acc = cnntrans_ori_dict['test_acc']\n",
+    "ax4.plot(range(len(EPOCHS)), smote_train_acc, label='Training Accuracy')\n",
+    "ax4.plot(range(len(EPOCHS)), smote_test_acc, label='Test Accuracy')\n",
+    "ax4.set_title('SMOTE Accuracy')\n",
+    "ax4.legend(loc='lower right')\n",
+    "\n",
+    "# Signal Transformation\n",
+    "cnngru_ts_dict = metrics_dict['ts_cnn_gru']\n",
+    "\n",
+    "ts_train_loss = cnngru_ts_dict['train_losses']\n",
+    "ts_test_loss = cnngru_ts_dict['test_losses']\n",
+    "ax5.plot(range(len(EPOCHS)), smote_train_loss, label='Training Loss')\n",
+    "ax5.plot(range(len(EPOCHS)), smote_test_loss, label='Test Loss')\n",
+    "ax5.set_title('SMOTE Loss')\n",
+    "ax5.legend(loc='best')\n",
+    "\n",
+    "ts_train_acc = cnngru_ts_dict['train_acc']\n",
+    "ts_test_acc = cnngru_ts_dict['test_acc']\n",
+    "ax6.plot(range(len(EPOCHS)), smote_train_acc, label='Training Accuracy')\n",
+    "ax6.plot(range(len(EPOCHS)), smote_test_acc, label='Test Accuracy')\n",
+    "ax6.set_title('SMOTE Accuracy')\n",
+    "ax6.legend(loc='lower right')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -1125,7 +1229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
