fix: better graph visualisation

--- a/CNN_GRU.ipynb
+++ b/CNN_GRU.ipynb
@@ -393,16 +393,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# PATH = './model/CNN_GRU_model_val.pth'\n",
-    "# torch.save(model.state_dict(), PATH)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -411,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +413,7 @@
     "    ax1.plot(range(1, len(train_losses)+1), train_losses, label='Training Loss')\n",
     "    ax1.plot(range(1, len(val_losses)+1), val_losses, label='Validation Loss')\n",
     "    ax1.set_title('Loss')\n",
-    "    ax1.legend(loc='lower right')\n",
+    "    ax1.legend(loc='best')\n",
     "\n",
     "    ax2.plot(range(1, len(train_accuracies)+1), train_accuracies, label='Training Accuracy')\n",
     "    ax2.plot(range(1, len(val_accuracies)+1), val_accuracies, label='Validation Accuracy')\n",
