--- a/main.ipynb
+++ b/main.ipynb
@@ -494,8 +494,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Transformers-CNN Test: 0.9940 \\\n",
     "Transformer-CNN(SMOTE) Test Accuracy: 0.9976 \\\n",
-    "Transformer-CNN(angment) Test Accuracy: 0.8277"
+    "Transformer-CNN(augment) Test Accuracy: 0.8277"
    ]
   },
   {
