--- a/main.ipynb
+++ b/main.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We shall evaluate all models on unseen data by using the models which are only trained on the mitbih_train.csv and we do testing on mitbih_test.csv here"
+    "In this notebook, we evaluate all trained models on unseen data from 'mitbih_test.csv'. We first do a comparison of basic models and then compare the performance of hybrid models trained on original and augmented datasets to see if data augmentation can help our models to achieve better classification accuracy."
    ]
   },
   {
@@ -87,7 +87,7 @@
    "source": [
     "# Evaluation of basic models\n",
     "\n",
-    "In this section, we evaluate 3 base models, namely GRU, CNN and Transformer"
+    "In this section, we evaluate 3 basic models, namely GRU, CNN and Transformer."
    ]
   },
   {
